fix: correct card overflow  on mobile

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,3 @@
-section {
-  scroll-margin-top: var(--nav-h);
-}
-
 .contact {
   --radius: 18px;
   --pad: 1.25rem;
@@ -11,14 +7,13 @@ section {
   isolation: isolate;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0rem;
-  ;
+  padding: 2rem 1rem 4rem;
   --nav-h: 72px;
   color: white;
 }
 
 .title {
-  font-size: 3rem;
+  font-size: clamp(1.6rem, 1.6vw + 1rem, 2.6rem);
   font-weight: 800;
   text-align: center;
   letter-spacing: .02em;
@@ -276,7 +271,6 @@ textarea {
   a,
   .loc {
     color: #ffa726;
-    font-style: italic;
     background-clip: text;
     font-weight: 800;
     font-size: 1.1rem;
