--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+  padding: 0 0 2.2rem;
+}
 .container {
   position: fixed;
   top: 0;
