--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Kode+Mono:wght@400..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Baumans&family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Simonetta:ital,wght@0,400;0,900;1,400;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
-
 
 body {
   margin: 0;
@@ -32,4 +28,18 @@ h2 {
       background-position: 100% 50%;
     }
   }
+}
+
+.flex>*,
+.grid>* {
+  min-width: 0;
+  min-height: 0;
+}
+
+h1,
+h2,
+h3,
+.card {
+  position: relative;
+  z-index: 0;
 }
